WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153215
assertions in BytecodeUseDef.h about opcode length are off by one
https://bugs.webkit.org/show_bug.cgi?id=153215
Summary
assertions in BytecodeUseDef.h about opcode length are off by one
Saam Barati
Reported
2016-01-18 18:11:48 PST
...
Attachments
patch
(3.88 KB, patch)
2016-01-18 18:15 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch
(3.87 KB, patch)
2016-01-18 18:16 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-01-18 18:15:11 PST
Created
attachment 269249
[details]
patch
Saam Barati
Comment 2
2016-01-18 18:16:20 PST
Created
attachment 269250
[details]
patch renamed bug
WebKit Commit Bot
Comment 3
2016-01-18 20:09:07 PST
Comment on
attachment 269250
[details]
patch Clearing flags on attachment: 269250 Committed
r195246
: <
http://trac.webkit.org/changeset/195246
>
WebKit Commit Bot
Comment 4
2016-01-18 20:09:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug