assertions in BytecodeUseDef.h about opcode length are off by one https://bugs.webkit.org/show_bug.cgi?id=153215

Reviewed by Dan Bernstein.

* bytecode/BytecodeUseDef.h:
(JSC::computeUsesForBytecodeOffset):


Canonical link: https://commits.webkit.org/171289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195246 268f45cc-cd09-0410-ab3c-d52691b4dbfc